--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
   <body>
@@ -31,12 +32,12 @@
     <!--main-->
     <main>
       <!--section1-->
-      <section>
+      <section class="logo">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!--section2-->
-      <section>
+      <section class="section-1">
         <h2 hidden>features</h2>
         <ul>
           <li>
