--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
+            <h3>monday</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
           </li>
         </ul>
       </section>
