--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="nav-page">
         <!--LOGO-->
-        <a href="./index.html">WebStudio</a>
+        <a class="nav-logo" href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
