--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
       rel="stylesheet">
 
   <link rel="stylesheet" href="./css/styles.css" />
-    <title>WebStudio</title>
+    <title>WebStudio/title>
   </head>
   <body>
     <header>
       <nav class="nav-page">
         <!--LOGO-->
-        <a class="nav-logo" href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+        <a class="nav-logo" href="./index.html"><p class="logo-w">Web<span class="logo-st">Studio</span></p></a>
+        <ul class="list">
+          <li><a class="menu-a" href="./index.html">Studio</a></li>
+          <li><a class="menu-b" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="menu-c" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
