--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav class="nav-page">
+      <nav>
         <!--LOGO-->
         <a class="nav-logo" href="./index.html"><p class="logo-w">Web<span class="logo-st">Studio</span></p></a>
         <ul class="list">
