--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet">
 
   <link rel="stylesheet" href="./css/styles.css" />
-    <title>WebStudio/title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
