--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+
 
   <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="navigation">
         <!--LOGO-->
-        <a class="nav-logo" href="./index.html"><p class="logo-w">Web<span class="logo-st">Studio</span></p></a>
+        <a class="nav-logo link" href="./index.html"><p class="logo-w">Web<span class="logo-st">Studio</span></p></a>
         <ul class="list">
-          <li><a class="menu-a" href="./index.html">Studio</a></li>
-          <li><a class="menu-b" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="menu-c" href="#">Contacts</a></li>
+          <li><a class="list-a" href="./index.html">Studio</a></li>
+          <li><a class="list-b" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="list-c" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
