--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="navigation">
         <!--LOGO-->
-        <a class="nav-logo link" href="./index.html"><p class="logo-w">Web<span class="logo-st">Studio</span></p></a>
+        <a class="nav-logo" href="./index.html"><p class="logo-w">Web<span class="logo-st">Studio</span></p></a>
         <ul class="list">
           <li><a class="list-a" href="./index.html">Studio</a></li>
           <li><a class="list-b" href="./portfolio.html">Portfolio</a></li>
