--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header class="header">
-      <nav class="navigation">
+    <header>
+      <nav>
         <!--LOGO-->
-        <a class="nav-logo" href="./index.html"><p class="logo-w">Web<span class="logo-st">Studio</span></p></a>
+        <a class="nav-logo" href="./index.html">Web<span class="logo-st">Studio</span></a>
         <ul class="list">
           <li><a class="list-a" href="./index.html">Studio</a></li>
           <li><a class="list-b" href="./portfolio.html">Portfolio</a></li>
