--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
 
-    
+
    <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <!--LOGO-->
-        <a class="nav-logo" href="./index.html">Web<span class="logo-st">Studio</span></a>
+        <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
         <ul class="list">
           <li><a class="list-a" href="./index.html">Studio</a></li>
           <li><a class="list-b" href="./portfolio.html">Portfolio</a></li>
