--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--LOGO-->
         <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
         <ul class="list">
-          <li><a class="list-a" href="./index.html">Studio</a></li>
+          <li><a class="list-a link" href="./index.html">Studio</a></li>
           <li><a class="list-b" href="./portfolio.html">Portfolio</a></li>
           <li><a class="list-c" href="#">Contacts</a></li>
         </ul>
