--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
         <ul class="list">
           <li><a class="list-a link" href="./index.html">Studio</a></li>
-          <li><a class="list-b" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="list-c" href="#">Contacts</a></li>
+          <li><a class="list-b link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="list-c link" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
