--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a class="list-a link" href="#">Contacts</a></li>
         </ul>
       </nav>
-      <address class="adrdress">
+      <address class="address">
         <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="mail link">info@devstudio.com</a>
