--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="mail link">info@devstudio.com</a>
+            <a  class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a>
+            <a class="contact link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
