--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     <header>
       <nav>
         <!--LOGO-->
-        <a class="logo-link" href="./index.html">Web<span class="logo-color">Studio</span></a>
+        <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
         <ul class="list">
-          <li><a class="list-a-link" href="./index.html">Studio</a></li>
-          <li><a class="list-a-link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="list-a-link" href="#">Contacts</a></li>
+          <li><a class="list-a link" href="./index.html">Studio</a></li>
+          <li><a class="list-a link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="list-a link" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="mail link">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
