--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!--main-->
     <main>
       <!--section1-->
-      <section class="logo">
+      <section class="list">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
