--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <!--main-->
     <main>
       <!--section1-->
-      <section class="list">
+      <section class="section-one">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!--section2-->
-      <section class="section-1">
+      <section class="section-two">
         <h2 hidden>features</h2>
         <ul>
           <li>
