--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
       <!--section1-->
       <section class="section-one">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="section-effective">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!--section2-->
