--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!--section1-->
       <section class="section-one">
         <h1 class="section-effective">Effective Solutions for Your Business</h1>
-        <button class="section-butt" type="button">Order Service</button>
+        <button class="section-but" type="button">Order Service</button>
       </section>
       <!--section2-->
       <section class="section-two">
