--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </section>
       <!--section3-->
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="section-img">What are we doing</h2>
         <ul>
           <li>
             <img
