--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <!--section3-->
       <section>
         <h2 class="section-img">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/img-5.jpg"
