--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
       </section>
       <!--section4-->
       <section>
-        <h2>Our Team</h2>
-        <ul>
+        <h2 class="section4-team">Our Team</h2>
+        <ul class="list">
           <li>
             <img src="./images/img-1.jpg" alt="Mark" width="264" height="260" />
-            <h3>Mark Guerrero</h3>
+            <h3 class="section4-team">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
@@ -124,7 +124,7 @@
               height="260"
             />
 
-            <h3>Tom Ford</h3>
+            <h3 class="section4-team">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
@@ -135,7 +135,7 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="section4-team">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
@@ -146,7 +146,7 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="section4-team">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
