--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </section>
       <!--section4-->
       <section class="section-4">
-        <h2 class="section4-team">Our Team</h2>
+        <h2 class="section-img">Our Team</h2>
         <ul class="list">
           <li>
             <img src="./images/img-1.jpg" alt="Mark" width="264" height="260" />
