--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         <ul class="list">
           <li>
             <img src="./images/img-1.jpg" alt="Mark" width="264" height="260" />
-            <h3 class="section4-team">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="features-head">Mark Guerrero</h3>
+            <p class="section-4-text">Product Designer</p>
           </li>
 
           <li>
@@ -124,8 +124,8 @@
               height="260"
             />
 
-            <h3 class="section4-team">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="features-head">Tom Ford</h3>
+            <p class="section-4-tex">Frontend Developer</p>
           </li>
 
           <li>
@@ -135,8 +135,8 @@
               width="264"
               height="260"
             />
-            <h3 class="section4-team">Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="features-head">Camila Garcia</h3>
+            <p class="section-4-tex">Marketing</p>
           </li>
 
           <li>
@@ -147,7 +147,7 @@
               height="260"
             />
             <h3 class="section4-team">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="features-head">UI Designer</p>
           </li>
         </ul>
       </section>
