--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <li>
             <img src="./images/img-1.jpg" alt="Mark" width="264" height="260" />
             <h3 class="features-head">Mark Guerrero</h3>
-            <p class="section-4-text">Product Designer</p>
+            <p class="features-text">Product Designer</p>
           </li>
 
           <li>
@@ -125,7 +125,7 @@
             />
 
             <h3 class="features-head">Tom Ford</h3>
-            <p class="section-4-tex">Frontend Developer</p>
+            <p class="features-text">Frontend Developer</p>
           </li>
 
           <li>
@@ -136,7 +136,7 @@
               height="260"
             />
             <h3 class="features-head">Camila Garcia</h3>
-            <p class="section-4-tex">Marketing</p>
+            <p class="features-text">Marketing</p>
           </li>
 
           <li>
@@ -146,8 +146,8 @@
               width="264"
               height="260"
             />
-            <h3 class="section4-team">Daniel Wilson</h3>
-            <p class="features-head">UI Designer</p>
+            <h3 class="features-head">Daniel Wilson</h3>
+            <p class="features-text">UI Designer</p>
           </li>
         </ul>
       </section>
