--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </ul>
       </section>
       <!--section4-->
-      <section class="section-4">
+      <section class="section-format-4">
         <h2 class="section-img">Our Team</h2>
         <ul class="list">
           <li>
