--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
       </section>
     </main>
     <!--Footer-->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer-web">
+      <a class="logo link" href="./index.html">Web<span class="logo-color">studio</span></a>
+      <p class="features-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
