--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <!--Footer-->
     <footer class="footer-web">
       <a class="logo link" href="./index.html">Web<span class="logo-footer">studio</span></a>
-      <p class="features-text">
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
