--- a/portfolio.html
+++ b/portfolio.html
@@ -14,3 +14,7 @@
   <link rel="stylesheet" href="./css/styles.css" />
   <title>WebStudio</title>
   </head>
+  <header></header>
+  <main></main>
+  <footer></footer>
+  
