--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,26 @@
   <link rel="stylesheet" href="./css/styles.css" />
   <title>WebStudio</title>
   </head>
-  <header></header>
+  <header>
+    <!--LOGO-->
+    <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
+    <ul class="list">
+      <li><a class="list-a link" href="./index.html">Studio</a></li>
+      <li><a class="list-a link" href="./portfolio.html">Portfolio</a></li>
+      <li><a class="list-a link" href="#">Contacts</a></li>
+    </ul>
+    </nav>
+    <address class="address">
+      <ul class="list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="mail link">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
+    </address>
+    </header>
+  </header>
   <main></main>
   <footer></footer>
-  
