--- a/portfolio.html
+++ b/portfolio.html
@@ -34,4 +34,11 @@
     </address>
   </header>
   <main></main>
-  <footer></footer>
+  <footer>
+      <footer class="footer-web">
+        <a class="logo link" href="./index.html">Web<span class="logo-footer">studio</span></a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+  </footer>
