--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,14 @@
   <title>WebStudio</title>
   </head>
   <header>
-    <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
-    <ul class="list">
-      <li><a class="list-a link" href="./index.html">Studio</a></li>
-      <li><a class="list-a link" href="./portfolio.html">Portfolio</a></li>
-      <li><a class="list-a link" href="#">Contacts</a></li>
-    </ul>
-    </nav>
+    <nav>
+      <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
+      <ul class="list">
+        <li><a class="list-a link" href="./index.html">Studio</a></li>
+        <li><a class="list-a link" href="./portfolio.html">Portfolio</a></li>
+        <li><a class="list-a link" href="#">Contacts</a></li>
+      </ul>
+     </nav>
     <address class="address">
       <ul class="list">
         <li>
