--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     <section>
       <h1 hidden>portfolio</h1>
       <ul>
-         <li class="portf-desing"><button class="desing-all link" type="ALL"></button> </li>
+         <li class="portf-desing"><button class="desing-all link" type="button">ALL</button> </li>
         <li> </li>
         <li> </li>
         <li> </li>
