--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,8 @@
     <!--hero-->
     <section>
       <h1 hidden>portfolio</h1>
-      <ul>
-         <li class="portf-desing"><button class="desing-all link" type="button">ALL</button> </li>
+      <ul class="website list">
+         <li class="portf-desing"><button class="desing-all link" type="button">ALL</button></li>
         <li> </li>
         <li> </li>
         <li> </li>
