--- a/portfolio.html
+++ b/portfolio.html
@@ -40,11 +40,11 @@
       <h1 hidden>portfolio</h1>
       <ul class="website list">
          <li class="portf-desing"><button class="desing-all link" type="button">ALL</button></li>
-        <li> </li>
-        <li> </li>
-        <li> </li>
-        <li> </li>
-      </ul>
+          <li class="portf-desing"><button class="desing-all link" type="button">Web Site</button></li>
+          <li class="portf-desing"><button class="desing-all link" type="button">App</button></li>
+          <li class="portf-desing"><button class="desing-all link" type="button">Design</button></li>
+          <li class="portf-desing"><button class="desing-all link" type="button">Marketing</button></li>
+        </ul>
     </section>
   
   
