--- a/portfolio.html
+++ b/portfolio.html
@@ -39,8 +39,8 @@
     <section>
       <h1 hidden>portfolio</h1>
       <ul class="website list">
-         <li class="portf-desing"><button class="desing-all link" type="button">ALL</button></li>
-          <li class="portf-desing"><button class="desing-all link" type="button">Web Site</button></li>
+         <li class="portf-desing"><button class="desing-all btn" type="button">ALL</button></li>
+          <li class="portf-desing"><button class="desing-all btn" type="button">Web Site</button></li>
           <li class="portf-desing"><button class="desing-all link" type="button">App</button></li>
           <li class="portf-desing"><button class="desing-all link" type="button">Design</button></li>
           <li class="portf-desing"><button class="desing-all link" type="button">Marketing</button></li>
