--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,9 @@
       <ul class="website list">
          <li class="portf-desing"><button class="desing-all btn" type="button">ALL</button></li>
           <li class="portf-desing"><button class="desing-all btn" type="button">Web Site</button></li>
-          <li class="portf-desing"><button class="desing-all link" type="button">App</button></li>
-          <li class="portf-desing"><button class="desing-all link" type="button">Design</button></li>
-          <li class="portf-desing"><button class="desing-all link" type="button">Marketing</button></li>
+          <li class="portf-desing"><button class="desing-all btn" type="button">App</button></li>
+          <li class="portf-desing"><button class="desing-all btn" type="button">Design</button></li>
+          <li class="portf-desing"><button class="desing-all btn" type="button">Marketing</button></li>
         </ul>
     </section>
   
