--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,8 @@
   </header>
   <main>
     <!--hero-->
-    <section>
-      <h1 hidden>portfolio</h1>
+    <section class="prof-section">
+      <h1 hidden class="hidden-section">portfolio</h1>
       <ul class="website list">
          <li class="portf-desing"><button class="desing-all btn" type="button">ALL</button></li>
           <li class="portf-desing"><button class="desing-all btn" type="button">Web Site</button></li>
