--- a/portfolio.html
+++ b/portfolio.html
@@ -39,11 +39,11 @@
     <section class="prof-section">
       <h1 hidden class="hidden-section">portfolio</h1>
       <ul class="website list">
-         <li class="portf-desing"><button class="desing-all btn" type="button">ALL</button></li>
-          <li class="portf-desing"><button class="desing-all btn" type="button">Web Site</button></li>
-          <li class="portf-desing"><button class="desing-all btn" type="button">App</button></li>
-          <li class="portf-desing"><button class="desing-all btn" type="button">Design</button></li>
-          <li class="portf-desing"><button class="desing-all btn" type="button">Marketing</button></li>
+         <li class="portf-desing"><button class="desing-all" type="button">ALL</button></li>
+          <li class="portf-desing"><button class="desing-all" type="button">Web Site</button></li>
+          <li class="portf-desing"><button class="desing-all" type="button">App</button></li>
+          <li class="portf-desing"><button class="desing-all" type="button">Design</button></li>
+          <li class="portf-desing"><button class="desing-all" type="button">Marketing</button></li>
         </ul>
     </section>
   
