--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,19 @@
           <li class="portf-desing"><button class="desing-all" type="button">Marketing</button></li>
         </ul>
     </section>
+    <!--section 2-->
+    <section class="second-stction">
+      <ul class="for-list">
+        <li class="section-link">
+          <img src="./img/img-1.jpg" alt="interface" width="360"
+          height="300">
+          <h2>Banking App Interface Concept</h2>
+          <p>App</p>
+
+        </li>
+      </ul>
+
+    </section>
   
   
   </main>
