--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     <section class="second-stction">
       <ul class="for-list">
         <li class="section-link">
-          <img src="./img/img-1.jpg" alt="interface" width="360"
+          <img src="./images/portflu-1.jpg"  alt="interface" width="360"
           height="300">
           <h2>Banking App Interface Concept</h2>
           <p>App</p>
