--- a/portfolio.html
+++ b/portfolio.html
@@ -48,8 +48,8 @@
     
     <!--section 2-->
     <section class="second-stction">
-      <ul class="for-list">
-        <li class="section-link">
+      <ul class="for list">
+        <li class="section link">
           <img src="./images/portflu-1.jpg"  alt="interface" width="360"
           height="300">
           <h2>Banking App Interface Concept</h2>
