--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     <!--section 2-->
     <section class="second-stction">
       <ul class="for list">
-        <li class="section link">
+        <li class="section ink">
           <img src="./images/portflu-1.jpg"  alt="interface" width="360"
           height="300">
           <h2>Banking App Interface Concept</h2>
