--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,8 @@
     
     <!--section 2-->
         <ul class="for list">
-        <li class="section ink">
+        <li class="second-app">
+          <a class="link"   href=""></a>
           <img src="./images/portflu-1.jpg"  alt="interface" width="360"
           height="300">
           <h2>Banking App Interface Concept</h2>
