--- a/portfolio.html
+++ b/portfolio.html
@@ -49,12 +49,12 @@
     <!--section 2-->
         <ul class="for list">
         <li class="second-app">
-          <a class="link"   href=""></a>
-          <img src="./images/portflu-1.jpg"  alt="interface" width="360"
-          height="300">
-          <h2>Banking App Interface Concept</h2>
-          <p>App</p>
+          <a class="link"   href="">
+            <img src="./images/portflu-1.jpg" alt="interface" width="360" height="300">
+            <h2>Banking App Interface Concept</h2>
+            <p>App</p>
 
+          </a>
         </li>
       </ul>
     
