--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
         <li class="second-app">
           <a class="link" href="">
             <img src="./images/portflu-4.jpg" alt="interface" width="360" height="300">
-            <h2>Taxi Servicet</h2>
+            <h2>Taxi Service</h2>
             <p>Marketing</p>
         
           </a>
