--- a/portfolio.html
+++ b/portfolio.html
@@ -125,7 +125,7 @@
   
   
   </main>
-  <footer>
+  <footer class="footer-page">
       <footer class="footer-web">
         <a class="logo link" href="./index.html">Web<span class="logo-footer">studio</span></a>
         <p class="footer-text">
