--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,10 @@
     <address class="address">
       <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com" class="mail link">info@devstudio.com</a>
+          <a class="list-a link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a>
+          <a class="list-a link" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </address>
