--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </nav>
       <address class="address">
         <ul class="list">
-          <li>
+          <li class="item-addres">
             <a class="list-a link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="item-addres">
             <a class="list-a link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
