--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       <ul class="list">
         <li><a class="list-a link" href="./index.html">Studio</a></li>
         <li><a class="list-a link" href="./portfolio.html">Portfolio</a></li>
-        <li><a class="list-a link" href="#">Contacts</a></li>
+        <li><a class="list-a link" href="">Contacts</a></li>
       </ul>
      </nav>
     <address class="address">
