--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="./css/styles.css" />
   <title>WebStudio</title>
   </head>
-  <header>
-    <nav>
+  <header class="header-section">
+    <nav class="header-navigation">
       <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
       <ul class="list">
         <li><a class="list-a link" href="./index.html">Studio</a></li>
