--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
       <section class="section-format-img">
         <h2 class="section-img">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="section-picter">
             <img src="./images/img-1.jpg" alt="Mark" width="264" height="260" />
             <h3 class="features-head">Mark Guerrero</h3>
             <p class="features-text">Product Designer</p>
           </li>
 
-          <li>
+          <li class="section-picter">
             <img
               src="./images/img-2.jpg"
               alt="Tom Ford"
@@ -128,7 +128,7 @@
             <p class="features-text">Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="section-picter">
             <img
               src="./images/img-3.jpg"
               alt="Camilla Garcia"
@@ -139,7 +139,7 @@
             <p class="features-text">Marketing</p>
           </li>
 
-          <li>
+          <li class="section-picter">
             <img
               src="./images/img-4.jpg"
               alt="Daniel Wilson"
