--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </main>
     <!--Footer-->
     <footer class="footer-web">
-      <a class="logo link" href="./index.html">Web<span class="logo-footer">studio</span></a>
+      <a href="./index.html" class="logo link">Web<span class="logo-footer">studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
