--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <!--LOGO-->
         <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
         <ul class="list">
-          <li class="list-itaem"><a class="list-a link" href="./index.html">Studio</a></li>
-          <li class="list-itaem"><a class="list-a link" href="./portfolio.html">Portfolio</a></li>
-          <li class="list-itaem"><a class="list-a link" href="">Contacts</a></li>
+          <li><a class="list-a link" href="./index.html">Studio</a></li>
+          <li><a class="list-a link" href="./portfolio.html">Portfolio</a></li>
+          <li"><a class="list-a link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
