--- a/portfolio.html
+++ b/portfolio.html
@@ -127,7 +127,7 @@
   </main>
   <footer class="footer-page">
       <footer class="footer-web">
-        <a class="logo link" href="./index.html">Web<span class="logo-footer">studio</span></a>
+        <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with digital
           marketing & growth solutions.
