--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="list">
           <li><a class="list-a link" href="./index.html">Studio</a></li>
           <li><a class="list-a link" href="./portfolio.html">Portfolio</a></li>
-          <li"><a class="list-a link" href="">Contacts</a></li>
+          <li"><a class="list-a link" href="tel:+110001111111">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
