--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800family=Roboto:wght@400;500;700;900display=swap"
     rel="stylesheet">
 
 
@@ -21,7 +21,7 @@
         <ul class="list">
           <li><a class="list-a link" href="./index.html">Studio</a></li>
           <li><a class="list-a link" href="./portfolio.html">Portfolio</a></li>
-          <li"><a class="list-a link" href="">Contacts</a></li>
+          <li><a class="list-a link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
