--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800family=Roboto:wght@400;500;700;900display=swap"
     rel="stylesheet">
 
 
   <link rel="stylesheet" href="./css/styles.css" />
   <title>WebStudio</title>
+</head>
   </head>
   <header class="header-section">
     <nav class="header-navigation">
