--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </section>
     </main>
     <!--Footer-->
-    <footer class="footer-web">
+    <footer class="footer-page">
       <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
